--- a/public/template/orderPrint.pug
+++ b/public/template/orderPrint.pug
@@ -29,7 +29,7 @@ html(lang="en")
           span #{data.customer.customerName}
           span #{data.customer.address} #{data.customer.city}
           b
-          span GSTIN: #{data.shop.gstin}
+          span GSTIN: #{data.customer.gstin}
           div MOBILE NO: #{data.customer.mobileNumber}
       div(id="productArea" style="border-style: solid; border-width: 0px 1px 1px 1px;")
         table(style="width: 100%;")
