--- a/public/template/home.pug
+++ b/public/template/home.pug
@@ -22,4 +22,6 @@ html(lang="en")
                 li
                     a(href="/orders") Create Order
                 li
+                    a(href="/orders/edit") Edit Order
+                li
                     a(href="/orders") Order List page
