Home page on babellen link click

--- a/public/template/customerDetails.pug
+++ b/public/template/customerDetails.pug
@@ -9,7 +9,7 @@ html(lang="en")
     body
         header
             div(class="container")
-                a(class="logo" title="Babbelen")
+                a(class="logo" href="/home" title="Babbelen")
                     img(id="headerLogo" src="../images/logo.png" title="Babbelen")
         h3 Edit Customer Details
         div(class="content")
