--- a/public/template/order.pug
+++ b/public/template/order.pug
@@ -11,7 +11,7 @@ html(lang="en")
     body
         header
             div(class="container")
-                a(class="logo" title="Babbelen")
+                a(class="logo" href="/home" title="Babbelen")
                     img(id="headerLogo" src="../images/logo.png" title="Babbelen")
         div(class="content")
             if data.orderNumber
