--- a/public/template/shopDetails.pug
+++ b/public/template/shopDetails.pug
@@ -10,7 +10,7 @@ html(lang="en")
     body
         header
             div(class="container")
-                a(class="logo" title="Babbelen")
+                a(class="logo" href="/home" title="Babbelen")
                     img(id="headerLogo" src="../images/logo.png" title="Babbelen")
         h3 Edit Shop Details
         div(class="content")
