order print page

--- a/public/template/home.pug
+++ b/public/template/home.pug
@@ -25,3 +25,5 @@ html(lang="en")
                     a(href="/orders/edit") Edit Order
                 li
                     a(href="/orders") Order List page
+                li
+                    a(href="/orders/printForm") Print Order
