--- a/public/template/order.pug
+++ b/public/template/order.pug
@@ -26,7 +26,7 @@ html(lang="en")
                     input(type="hidden" name ="orderNumber" value = `${data.orderNumber}`)
                 if !data.orderNumber
                     input(type="hidden" id="productJSON" name="productJSON" value=``)
-                input(type="hidden" id="order_summary" name="orderSummary")
+                input(type="hidden" id="order_summary" name="orderSummary" value = `${data.orderNumber ? JSON.stringify(data.orderSummary) : "" }`)
                 div
                 if !data.orderNumber
                     button(type="button" onClick="document.getElementById('createOrder').submit();") Create Order
