edit order fix & order report

--- a/public/template/home.pug
+++ b/public/template/home.pug
@@ -27,3 +27,5 @@ html(lang="en")
                     a(href="/orders") Order List page
                 li
                     a(href="/orders/printForm") Print Order
+                li
+                    a(href="/orders/reportForm") Generate Reports
