Change order number

--- a/public/template/home.pug
+++ b/public/template/home.pug
@@ -24,7 +24,7 @@ html(lang="en")
                 li
                     a(href="/orders/edit") Edit Order
                 li
-                    a(href="/orders") Order List page
+                    a(href="/orders/numberchangeForm") Change order number
                 li
                     a(href="/orders/printForm") Print Order
                 li
