--- a/public/template/numberchangeForm.pug
+++ b/public/template/numberchangeForm.pug
@@ -17,7 +17,7 @@ html(lang="en")
                   h2 Change Order Number
                   h4 Older Order Number is : #{data.oldNumber}
                   h4 Enter new order number to start with:
-                  input(type="text" name="orderNumber")
+                  input(type="number" name="orderNumber")
                   br
                   button(onclick='document.getElementById("orderNumberChange").submit();') Change Order
                   br
