Edit customer data

--- a/public/template/customerDetails.pug
+++ b/public/template/customerDetails.pug
@@ -17,7 +17,7 @@ html(lang="en")
                 h4 Mobile Number
                 input(type="number" name="mobileNumber" value=`${data.mobileNumber||""}`)
                 h4 Shop Name
-                input(type="text" name="customerName" value=`${data.shopName||""}`)
+                input(type="text" name="customerName" value=`${data.customerName||""}`)
                 h4 Address
                 textarea(row="4" name="address" column="50") #{data.address||""} 
                 h4 City
