--- a/public/template/home.pug
+++ b/public/template/home.pug
@@ -14,15 +14,15 @@ html(lang="en")
         div(id="content")
             ul 
                 li
+                    a(href="/orders") Create Order
+                li
+                    a(href="/orders/edit") Edit Order
+                li
                     a(href=`/shop`)  Edit Shop Details
                 li
                     a(href="/customers") Add Customer Details
                 li
-                    a(href="/products") Product Details
-                li
-                    a(href="/orders") Create Order
-                li
-                    a(href="/orders/edit") Edit Order
+                    a(href="/editCustomers") Edit Customer Details
                 li
                     a(href="/orders/numberchangeForm") Change order number
                 li
