--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,12 @@ body{
     color: red;
 }
 
+select{
+    height: 20px;
+    width: 205px;
+    border: 2px red;
+}
+
 li{
     margin: 0 0 30px 0;
     font-size: 20px;
