--- a/public/template/customerDetails.pug
+++ b/public/template/customerDetails.pug
@@ -14,18 +14,18 @@ html(lang="en")
         h3 Edit Customer Details
         div(class="content")
             form(id="editCustomerDetails" action="/customers" method="POST")
-                h4 Mobile Number
-                input(type="number" name="mobileNumber" value=`${data.mobileNumber||""}`)
+                h4 GSTIN
+                input(type="text" name="gstin" maxlength="15" value=`${data.gstin||""}`)
                 h4 Shop Name
                 input(type="text" name="customerName" value=`${data.customerName||""}`)
                 h4 Address
                 textarea(row="4" name="address" column="50") #{data.address||""} 
                 h4 City
                 input(type="text" name="city" value=`${data.city||""}`)
-                h4 gstin
-                input(type="text" name="gstin" value=`${data.gstin||""}`)
                 h4 email
                 input(type="text" name="email" value=`${data.email||""}`)
+                h4 Mobile Number
+                input(type="number" name="mobileNumber" value=`${data.mobileNumber||""}`)
                 input(type="hidden" name="shopMobileNumber" value =`${data.shopId}`)
                 br  
                 button(onclick='document.getElementById("editCustomerDetails").submit();') Save
