--- a/public/template/orderPrint.pug
+++ b/public/template/orderPrint.pug
@@ -8,6 +8,9 @@ html(lang="en")
   body
     div(id="body" style="width: 1000px;")
       div(id="billHeader" style="padding: 10px; border-style: solid; border-width: 1px;")
+        div(style="text-align: center;")
+          b #{data.order.billType}
+        br
         div(style="text-align: center;") #{data.shop.shopName}
           br
           span #{data.shop.address}, #{data.shop.city}
