--- a/public/template/reportForm.pug
+++ b/public/template/reportForm.pug
@@ -23,7 +23,8 @@ html(lang="en")
                 br
                 h4 Bill Type
                 select(id="cars" name="billType")
-                    option(value="Cash Bill" selected) Cash Bill
+                    option(value="" selected) All
+                    option(value="Cash Bill") Cash Bill
                     option(value="Credit Bill") Credit Bill
                 br
                 button(onclick='document.getElementById("report").submit();') Generate Report
