--- a/public/template/orderPrint.pug
+++ b/public/template/orderPrint.pug
@@ -22,7 +22,7 @@ html(lang="en")
       div(id="billing" style="height: auto;border-style: solid;border-width: 0px 1px 1px 1px;")  
         div(id="billDetails" style="padding: 0px 5px; width: 35%; display: inline-grid; height: 100%;position: relative;")
           div
-            b Bill No: &nbsp;&nbsp;&nbsp;A/#{data.order.orderNumber}
+            b Bill No: &nbsp;&nbsp;&nbsp;FY#{data.order.billYear}-#{data.order.orderNumber}
             br
             b PO NUMBER: #{data.order.poNumber}
             span(style="float:right;")
