--- a/public/template/orderPrint.pug
+++ b/public/template/orderPrint.pug
@@ -31,8 +31,8 @@ html(lang="en")
           span Date&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#{data.order.billDate.split("-")[2]}-#{data.order.billDate.split("-")[1]}-#{data.order.billDate.split("-")[0]}
           b Terms
         div(id="billingAddress" style="padding: 0px 5px; display: inline-grid;width: 60%;word-wrap: break-word ;border-left: solid 1px #000;")
-          span #{(data.customer.customerName).toUpperCase()}
-          span #{data.customer.address} #{data.customer.city}
+          span #{data.customer.customerName}
+          span #{(data.customer.address).toUpperCase()} #{data.customer.city}
           b
           span GSTIN: #{data.customer.gstin}
       div(id="productArea" style="border-style: solid; border-width: 0px 1px 1px 1px;")
