--- a/public/template/editOrder.pug
+++ b/public/template/editOrder.pug
@@ -13,6 +13,18 @@ html(lang="en")
                     img(id="headerLogo" src="../images/logo.png" title="Babbelen")
         div(id="content")
             form(action="/orders" method="get" id="editOrder")
+                h4 Bill Year
+                <select name="billYear" id="billYear">
+                    <option value="2019">2019</option>
+                    <option value="2020">2020</option>
+                    <option value="2021">2021</option>
+                    <option value="2022">2022</option>
+                    <option value="2023">2023</option>
+                    <option value="2024">2024</option>
+                    <option value="2025">2025</option>
+                    <option value="2026">2026</option>
+                    <option value="2027">2027</option>
+                </select>
                 h4 Order Number
                 input(type="number" name="orderNumber")
                 input(type="hidden" name="mode" value="edit")
